mega-menu close button update & gap fix

--- a/css/style.css
+++ b/css/style.css
@@ -8247,18 +8247,32 @@ body.mega-lock {
 
 .mega-wrap {
   max-width: 1200px;
-  margin: 0 auto;
+  margin: 5vh auto;
   height: 100%;
   display: grid;
   grid-template-rows: auto 1fr;
-  gap: 12px;
+  gap: 20%;
   padding: 16px
 }
-
-.mega-top {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end
+.mega-bottom {
+  margin-bottom: 1% ;
+  display: inline-block;
+}
+.mega-bottom button{
+    background-color: #000;
+    color: #fff;
+    font-size: 14px;
+    line-height: 20px;
+    padding: .5rem 1.5rem;
+    text-transform: capitalize;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: fit-content;
+}
+.mega-bottom button:hover{
+    background-color: #333;
+    color: #fff;
 }
 
 .mega-close {
@@ -8270,10 +8284,10 @@ body.mega-lock {
 }
 
 .mega-grid {
-  display: grid;
-  grid-template-columns: 220px 1fr 1fr;
-  gap: 24px;
-  height: 100%
+     display: grid;
+    grid-template-columns: 220px 1fr 1fr;
+    gap: 5vw;
+    height: 100%;
 }
 
 .mega-cats {
@@ -8298,7 +8312,7 @@ body.mega-lock {
 }
 
 .mega-content {
-  overflow: auto
+  overflow: hidden;
 }
 
 .mega-list {
